--- a/www/package.json
+++ b/www/package.json
@@ -33,10 +33,13 @@
     "shc-wasm": "file:../pkg"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.0",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^1.3.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0",
-    "terser-webpack-plugin": "^4.2.3"
+    "webpack-dev-server": "^3.1.5"
   }
 }
